--- a/hedera-setup/package.json
+++ b/hedera-setup/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hashgraph/sdk": "^2.40.0",
+    "axios": "^1.12.2",
     "dotenv": "^16.3.1",
     "ipfs-http-client": "^60.0.1"
   },
